Fixed alignment bug

--- a/styles.css
+++ b/styles.css
@@ -555,8 +555,11 @@ nav.nav-mobile div:not(.nav-line) {
   transform: scale(0.94);
   color: #666666;
   padding: 30px;
-  text-align: left;
   font-size: 15px;
+}
+
+.card:not(.card-left) {
+  text-align: left;
 }
 
 nav a {
